fix: adjustments to index and group size

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,16 @@
         "xlocmon": "cpp",
         "xloctime": "cpp",
         "set": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "cstdarg": "cpp",
+        "cwctype": "cpp",
+        "unordered_map": "cpp",
+        "functional": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "fstream": "cpp"
     }
 }
